# dwa_planner

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  package.xml  rosdoc.yaml
cfg/: GainSlope.cfg
config/: dwa_param.yaml  robot_param.yaml
doc/: manifest.yaml
docs/: Parameters.md  Parameters_8md.html  README_8md.html  Topics.md  Topics_8md.html  annotated.html  classDWAPlanner-members.html  classDWAPlanner.html  classDWAPlanner_1_1Cost-members.html  classDWAPlanner_1_1Cost.html  classDWAPlanner_1_1State-members.html  classDWAPlanner_1_1State.html  classDWAPlanner_1_1Window-members.html  classDWAPlanner_1_1Window.html  classes.html  dir_000000_000001.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4d304beff246a0fadde0c304060f6af4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dwa__planner_8cpp.html  dwa__planner_8cpp__incl.map  dwa__planner_8cpp__incl.md5  dwa__planner_8cpp_source.html  dwa__planner_8h.html  dwa__planner_8h__dep__incl.map  dwa__planner_8h__dep__incl.md5  dwa__planner_8h__incl.map  dwa__planner_8h__incl.md5  dwa__planner_8h_source.html  dwa__planner__node_8cpp.html  dwa__planner__node_8cpp__incl.map  dwa__planner__node_8cpp__incl.md5  dwa__planner__node_8cpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  (+13 more)
launch/: demo.launch  local_planner.launch  test_stop_line.launch
msg/: Edge_Gain.msg  Gain.msg
src/: detect_stack.cpp  dwa_planner.cpp  dwa_planner_node.cpp  parameters.cpp
test/: dwa_planner.test  dwa_planner_test.cpp
(+14 files in other folders)
